Prototype development - Continued binding markup for various views/pages including: - ce-inspection.html - ce-main.html - project-main.html - ce-action.html

--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -28,13 +28,13 @@
                 <ul class="topic-blocks block-container clearfix">
                     <li>
                         <a class="block block-hover" href="/admin/prototype/topic">
-                            <h3>Environment</h3>
+                            <h3>Air Quality</h3>
                             <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
                         </a>
                     </li>
                     <li>
                         <a class="block block-hover" href="/admin/prototype/topic">
-                            <h3>Communities</h3>
+                            <h3>Water Quality</h3>
                             <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
                         </a>
                     </li>
@@ -46,7 +46,7 @@
                     </li>
                     <li>
                         <a class="block block-hover" href="/admin/prototype/topic">
-                            <h3>Heritage</h3>
+                            <h3>Tailings Management</h3>
                             <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
                         </a>
                     </li>
@@ -82,7 +82,7 @@
                                 <span class="primary">Inspections</span>
                             </span>
                             <span class="metric">
-                                <div class="metric-block">{{project.inspections.length}}</div>
+                                <div class="metric-block">{{projectinspections.length}}</div>
                             </span>
                         </div>
                     </li>
@@ -95,7 +95,7 @@
                                 <span class="primary">Actions</span>
                             </span>
                             <span class="metric">
-                                <div class="metric-block">{{project.actions.length}}</div>
+                                <div class="metric-block">{{projectinspections.length}}</div>
                             </span>
                         </div>
                     </li>
