--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -23,7 +23,7 @@
                                 <span class="primary">Inspections</span>
                             </span>
                             <span class="metric">
-                                <div class="metric-block">{{project.inspections.length}}</div>
+                                <div class="metric-block">{{projectinspections.length}}</div>
                             </span>
                         </div>
                     </li>
@@ -36,7 +36,7 @@
                                 <span class="primary">Actions</span>
                             </span>
                             <span class="metric">
-                                <div class="metric-block">{{project.actions.length}}</div>
+                                <div class="metric-block">{{projectinspections.length}}</div>
                             </span>
                         </div>
                     </li>
@@ -44,6 +44,28 @@
             </section>
             <section>
                 <h2>Inspections</h2>
+                    <div class="title-bar">
+                        <h3>Viewing {{projectinspections.length}} of {{projectinspections.length}} actions</h3>
+                        <div class="filters">
+                            <div class="form-inline">
+                                <div class="form-group">
+                                    <select class="form-control">
+                                        <option selected>Sort by</option>
+                                        <option>Option 1</option>
+                                        <option>Option 2</option>
+                                        <option>Option 3</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <select class="form-control">
+                                        <option selected>10</option>
+                                        <option>25</option>
+                                        <option>50</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <table ng-table="tableParams" class="inspections-grid ce-grid table table-striped table-hover" show-filter="false">
                         <tr ng-repeat="inspection in projectinspections">
                             <td class="id-col"
