--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -1,10 +1,16 @@
 
 <div class="container">
+    
     <div class="breadcrumbs">
-        <a href="#">Projects</a> <span>/</span> <span>{{projectDetail.name}}</span>
+        <a href="#">Projects</a> 
+        <span>/</span> 
+        <span>{{projectDetail.name}}</span>
     </div>
+    
     <div class="title-container">
         <h1>{{projectDetail.name}}</h1>
+        
+        <!--
         <div class="actions">
             <a class="btn btn-link" href="javascript:void();">
                 <i class="material-icons fl">insert_drive_file</i>Project Documents
@@ -15,6 +21,8 @@
                 <i class="material-icons fl">pin_drop</i>Launch Map
             </a>
         </div>
+        -->
+        
     </div>
     <div class="row">
         <main class="col-sm-12 col-md-8">
