--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -2,6 +2,8 @@
 <div class="container">
     
     <div class="breadcrumbs">
+        <a ui-sref="projects">MEM</a>
+        <span>/</span>
         <a href="#">Projects</a> 
         <span>/</span> 
         <span>{{projectDetail.name}}</span>
